@@ -60,7 +60,6 @@ binary-arch: build install
 	dh_installchangelogs ChangeLog
 	dh_installdocs
 	dh_installmenu
-	dh_desktop
 	dh_link
 	dh_strip
 	dh_compress
